--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Super Journal",
+  "name": "Super Journal By iTar_",
   "icons": [
     {
       "src": "image/icon.png",
