--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://bestzxcmos03.github.io/superjournaal",
+  "homepage": "http://bestzxcmos03.github.io/superjournal",
   "name": "superjournal",
   "version": "0.1.0",
   "private": true,
